--- a/style.css
+++ b/style.css
@@ -116,18 +116,30 @@ footer {
     font-size: 5vw;
     padding: 10px 0;
     background-color: aqua;
+    
     width: 50%;
     text-align: center;
     position: relative;
     left: 23%;
 }
 
+
+
 #text_1{
     font-size: 3vw;
+    background-color: #777;
+    padding: 5px;
+    width: 25%;
+    position: relative;
+   
+    left: 35%;
 }
 
 #banner {
-    background-color: #ccc;
+    background: url('images/hamburg.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+    background-size: cover;
     color: black;
     padding: 15px;
 }
@@ -140,29 +152,112 @@ footer {
 
 .menu {
     float: left;
-    width: 20%;
+    width: 20%; /* The width is 20% by default*/
+
+}
+/* styling the login*/
+#login{
+    padding: 10px;
+    background-color: #777;
+   
+}
+
+
+
+/* image float right Fintech */
+
+#img_float_right{
+    float: right;
+    box-shadow: 1px 10px 5px 2px;
+    margin-bottom: 30px;
+}
+
+#border_image{
+    border:1px solid red;
+    margin-bottom: 20px;
+
+}
+
+hr {
+    border:1px solid red;
+}
+
+
+
+
+/* styling the IoT topic*/
+
+/*image float left */
+
+#img_float_left{
+    float: left;
+    box-shadow: 1px 10px 5px 2px;
+    margin-bottom: 10px;
 }
 
 .topic_item {
     padding: 8px;
-    margin-top: 7px;
-    border-bottom: 2px solid #f1f1f1;
+    margin: 7px 10px;
+    
 }
+
+
+/* lifestyle Hamburg*/
+#border {
+    border: 3px solid #4CAF50;
+    padding: 4px;
+    margin: 50px 10px 20px 10px;
+    width: 100%;
+  }
+
+.img2 {
+    float: right;
+}
+
+/* modern clearfix hack removes the overflow: auto
+.clearfix {
+    overflow: auto;
+}*/
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+/* Travel and Tourist Lifestyle*/
+
+.box {
+    float: left;
+    width: 33.33%;
+    padding: 70px;
+  }
+  
+
+
+/* styling main contaent */
 
 .main{
     float: left;
-    width: 60%;
+    width: 60%; /* the width is 60% by default*/
     padding: 0 20px;
     overflow: hidden;
+    box-shadow: 1px 10px 5px 2px;
+    margin-bottom: 15px;
 }
+
+/* styling right card */
 
 .right{
     background-color: lightblue;
     float: left;
-    width: 20%;
-    padding: 10px 15px;
-    margin-top: 7px;
+    width: 18%;
+    padding: 10px;
+    margin:9px ;
+    box-shadow: 1px 10px 5px 2px;
+
 }
+
 
 /* responsive web design*/
 
@@ -181,6 +276,82 @@ footer {
 @media only screen and (max-width: 500px){
     /* for mobile phones*/
     .menu, .main, .right {
-        width: 100%;
+        width: 100%; /* The width is 100% when the viewpoint is 800px or smaller*/
     }
+}
+
+
+/* 
+.all-browsers {
+  margin: 0;
+  padding: 5px;
+  background-color: lightgray;
+}
+
+.all-browsers > h1, .browser {
+  margin: 10px;
+  padding: 5px;
+}
+
+.browser {
+  background: white;
+}
+
+.browser > h2, p {
+  margin: 4px;
+  font-size: 90%;
+}
+*/
+
+.all-browsers {
+    margin: 0;
+    padding: 5px;
+    background-color: #777;
+    float: left;
+    box-shadow: 1px 10px 5px 2px;
+}
+
+.all-browsers > h1, .browser {
+    margin: 10px;
+    padding: 5px;
+}
+
+.browser {
+    background-color: white;
+}
+
+.browser > h2, p {
+    margin: 4px;
+    font-size: 90%;
+}
+
+aside {
+    width: 20%;
+    padding: 25px;
+    margin-left: 15%;
+    float: right;
+    font-style: italic;
+    background-color: #ccc;
+    font-size: 10px;
+}
+
+#aside_text {
+    font-size: 10px;
+}
+
+/* styling span for html emojis */
+span{
+    font-size: 20px;
+}
+
+/* footer */
+
+#footer_page {
+    padding: 40px;
+    text-align: center;
+    font-size: 20px;
+    background-color: rgb(158, 135, 222);
+    font-size: 12px;
+  
+    color: black;
 }
